--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"@floating-ui/dom": "^1.2.8",
 		"@iconify/svelte": "^3.1.3",
 		"@playwright/test": "^1.28.1",
-		"@skeletonlabs/skeleton": "^1.5.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
@@ -25,6 +24,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"daisyui": "^2.51.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
